<resources>
    <string name="app_name">OfflineFlow</string>
    <string name="search_bar">Search bar</string>
    <string name="history">History</string>
    <string name="viewall_option">View All</string>
    <string name="me_nav">Me</string>
    <string name="music_nav">Music</string>
    <string name="videos">Videos</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="recent_play">Recent Play</string>
    <string name="create_playlist">Create PlayList</string>
    <string name="all_songs">All Songs</string>
    <string name="album">Album</string>
    <string name="playlist">PlayList</string>
    <string name="folder">Folder</string>
    <string name="title_activity_music_play_design">MusicPlayDesign</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mixer">Mixer</string>
    <string name="fav">Fav</string>
    <string name="song_name">Song name</string>
    <string name="no_playlist_avaiable_message">You haven\'t created any playlists yet.\nAdd songs to a playlist from the music list.</string>
    <string name="no_songs_found">No Songs Found</string>
    <string name="share_songs">Share songs</string>
    <string name="test_banner_ad_unit">ca-app-pub-3940256099942544/9214589741</string>
    <string name="test_interstitial_ad_unit">ca-app-pub-3940256099942544/1033173712</string>
    <string name="test_reward_ad_unit">ca-app-pub-3940256099942544/5224354917</string>
    <string name="made_in_india">Made in India</string>
</resources>