<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar_color"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/title_color"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:id="@+id/search_img_ion"
                android:src="@drawable/search_log"
                android:paddingEnd="10dp"
                android:paddingStart="2dp"
                android:layout_gravity="end"
                android:contentDescription="@string/search_bar" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/categories_recycleview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            android:id="@+id/hidehistory"
            app:layout_constraintTop_toBottomOf="@+id/categories_recycleview"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textSize="24sp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:letterSpacing="0.05"
                android:textColor="@color/toolbar_color"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/delete_logo"
                android:paddingEnd="10dp"
                android:id="@+id/delete_logo_img"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/videoandmusic_history"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hidehistory" >
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/videohistory_recycleview"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/musichistory_recycleview"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/video_feature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/videoandmusic_history"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:letterSpacing="0.05"
                android:text="@string/videos"
                android:textColor="@color/toolbar_color"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp">

                <TextView
                    android:id="@+id/videos_viewall_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/viewall_design"
                    android:padding="5dp"
                    android:text="@string/viewall_option"
                    android:textColor="@color/toolbar_color"
                    android:textSize="17sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/video_feature_recycleview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/video_feature" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/music_feature"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/video_feature_recycleview">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:letterSpacing="0.05"
                android:text="@string/music_nav"
                android:textColor="@color/toolbar_color"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp">

                <TextView
                    android:id="@+id/musics_viewall_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/viewall_design"
                    android:padding="5dp"
                    android:text="@string/viewall_option"
                    android:textColor="@color/toolbar_color"
                    android:textSize="17sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/music_feature_recycleview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/music_feature" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>