<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MusicFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/music_feature_constarinLayout"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/liked_songs_feature_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/liked_songs"
                        android:padding="2dp"
                        android:src="@drawable/recommend_logo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="3dp"
                        android:gravity="center"
                        android:letterSpacing="0.05"
                        android:text="@string/liked_songs"
                        android:textColor="@color/toolbar_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/Recent_play_songList_feature_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/recent_play"
                        android:padding="2dp"
                        android:src="@drawable/recent_logo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="3dp"
                        android:gravity="center"
                        android:letterSpacing="0.01"
                        android:text="@string/recent_play"
                        android:textColor="@color/toolbar_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/createplay_list_feature_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/create_playlist"
                        android:padding="2dp"
                        android:src="@drawable/playlist_add__logo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="3dp"
                        android:gravity="center"
                        android:letterSpacing="0.05"
                        android:text="@string/create_playlist"
                        android:textColor="@color/toolbar_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/music_feature_constarinLayout"
        android:layout_height="match_parent"
        android:id="@+id/framlayout_musicFeature"/>

</RelativeLayout>